* 4678b8e (HEAD, tag: v2.0beta, origin/master, origin/HEAD, master) Version 2.0 beta
* ec9c028 (origin/bootstrap3, heroku/master, heroku/bootstrap3, bootstrap3) Rename hp_ref to fault_ref - 18/12/2014
* 6143629 Dropped comments table and :resolution and :title columns off incidents and incident_histories - 18/12/2014
* 1a450ae Updated UML class diagram - 18/12/2014
* c55688d Changes to the modal and updated features and tests - 18/12/2014
* aa3e6ae Minor changes to navabar testcase - now tests before and after login - 18/12/2014
* fe15123 Release candidate 2.0rc1 - 17/12/2014
* 05630f0 Responsive front page - 16/11/2014
* 7318102 Edit form complete - basic app now works! 16/12/2014
* 9943058 Create and Update forms complete - 15/12/2014
* ffef610 JS namespaced - app working - 14/12/2014
* 73af073 Interim commit to reorg JS
* 952d2e1 Incident details modal finsihed(ish) - 11/12/2014
* 4f024ef Primitive modals are working for some elements - 11/12/2014
* 560f2d0 Developing with SimpleModal - 8/12/2014
* 7bdbf82 Working version with leanModal - 5/11/2014
* f094cbf Admin login modal completed using leanModal JQuery plugin - 50122014
* f61332b Draft HomePage completed - Single Page App - 04/12/2014
* c90f760 System page and Title Page completed and responsive in IE8 - 3/12/2014
* 07bea38 System page and Title Page completed(ish) - 2/12/2014
* 85f0b39 System page 3rd attempt - 01/12/2014
* 89b689a System page 2nd attempt - 1/12/2014
* 7867013 System page 1st attempt - 30/11/2014
* eecf65e (origin/develop, gonzo_master, develop) Upgraded to PageRight 0.5.2 - 24/11/2014
* c9bfd21 Upgraded to PageRight 0.5
* 93ab8a7 Upgraded to page_right 0.4 - 20/11/2014
* 1ee88b8 Upgraded to ruby 2.1.5 and page_right 0.3
* 68784f7 Added new datafile
* ae113a0 Migrated app to Ruby 2.1.3
* 397e2c8 Migrated app to Rails version 4.1.6
* 2c149ce Changed JSON systems response to include :id, :color and :message
* 1a46ea7 V2 API Development underway - System names and statuses via JSON