@@ -2,28 +2,28 @@ source 'https://rubygems.org'
 # Ruby version
 ruby '2.1.5'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
-gem 'rails', '~> 4.2.0.rc3'
+gem 'rails', '~> 4.2.0'
 # Use postgresql as the database for Active Record
 gem 'pg', '~> 0.17.1'
 # Use SCSS for stylesheets
-gem 'sass-rails', '~> 5.0.0.beta1'
+gem 'sass-rails', '~> 5.0.0'
 # Use Uglifier as compressor for JavaScript assets
-gem 'uglifier', '>= 1.3.0'
+gem 'uglifier', '~> 2.6.0'
 # Use CoffeeScript for .js.coffee assets and views
-gem 'coffee-rails', '~> 4.0.0'
+gem 'coffee-rails', '~> 4.1.0'
 # Use HAML for HTML
-gem 'haml', '~> 4.0.5'                          
+gem 'haml', '~> 4.0.6'                          
 # Use jQuery as the JavaScript library
-gem 'jquery-rails', '~> 4.0.0.beta2'
-gem 'jquery-ui-rails'
+gem 'jquery-rails', '~> 4.0.2'
+gem 'jquery-ui-rails', '~> 5.0.3'
 # Build JSON APIs with ease.
-gem 'active_model_serializers', '~> 0.9'
+gem 'active_model_serializers', '~> 0.9.2'
 # Bootstrap 3.0
 gem 'bootstrap-sass', '~> 3.3.1.0'
 # Use ActiveModel has_secure_password
 gem 'bcrypt', '~> 3.1.9'
 # Building forms
-gem 'simple_form', '~> 3.0.2'
+gem 'simple_form', '~> 3.1.0'
 # bundle exec rake doc:rails generates the API under doc/api.
 gem 'sdoc', '~> 0.4.0', group: :doc
 
@@ -47,7 +47,7 @@ group :development, :test do
   # Call 'debugger' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
   # Access an IRB console on exception pages or by using <%= console %> in views
-  gem 'web-console', '~> 2.0.0.beta4'
+  gem 'web-console', '~> 2.0.0'
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
   # Gem for mocking and stubbing
