@@ -10,4 +10,4 @@
   =f.input :time, label: 'Start Time (HH24:MM)'
   =f.input :status, as: :hidden, input_html: {value: 'Open'}
   =f.error :base
-  =f.button :submit, label: 'Create Incident', class: 'btn-primary'
+  =f.button :submit, label: 'Create Incident', class: 'btn-primary form-btn'
