@@ -12,7 +12,7 @@
       systems
   .row
     .col-md-4.col-md-offset-4.text-center
-      %a.btn.btn-lg.btn-primary.title-btn{href: '#status-section'}
+      %a.btn.btn-lg.btn-primary#title-btn.blue-btn{href: '#status-section'}
         Goto Dashboard
 #status-section
   .container
