@@ -11,7 +11,7 @@
   %input#cancel-btn.btn.btn-primary.hidemodal{value: 'CANCEL'}
 
 :javascript
-  var LM={
+  var AdminLogin={
     setup: function() {
       $('#cancel-btn').on('click', function() {
         $('#login-modal').html('');
@@ -20,4 +20,4 @@
     }
   };
 
-  $(LM.setup);
+  $(AdminLogin.setup);
