@@ -1,3 +1,6 @@
+*	22/12/2014 - *** Version 2.0 Released ***
+
+* 996978e (HEAD, origin/bootstrap3, heroku/master, master, bootstrap3) Upgrade to rails 4.2 plus additional JQuery - 22/12/2014
 * 4678b8e (HEAD, tag: v2.0beta, origin/master, origin/HEAD, master) Version 2.0 beta
 * ec9c028 (origin/bootstrap3, heroku/master, heroku/bootstrap3, bootstrap3) Rename hp_ref to fault_ref - 18/12/2014
 * 6143629 Dropped comments table and :resolution and :title columns off incidents and incident_histories - 18/12/2014
